--- a/src/options/options.html
+++ b/src/options/options.html
@@ -15,7 +15,7 @@
 		</p>
 	</form>
 
-	<script src="../lib/options.js"></script>
+	<script src="../lib/main.js"></script>
 	<script src="options.js"></script>
 </body>
 </html>
