--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -41,8 +41,7 @@
 	
 	<!-- <div class="panel-section-footer"> Test </div> -->
 
-	<script src="../lib/options.js"></script>
-	<script src="../background/functions.js"></script>
+	<script src="../lib/main.js"></script>
 	<script src="popup.js"></script>
 </body>
 </html>
