Rename 'popup' into 'browser_action' to avoid confusion

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Popup! Popup!</title>
-	<link rel="stylesheet" href="popup.css">
+	<link rel="stylesheet" href="browser_action.css">
 </head>
 <body>
 	<div class="panel-section panel-section-header">
@@ -33,6 +33,6 @@
 	
 
 	<script src="../lib/main.js"></script>
-	<script src="popup.js"></script>
+	<script src="browser_action.js"></script>
 </body>
 </html>
