Add reset button in setting

--- a/src/options/options.html
+++ b/src/options/options.html
@@ -9,17 +9,18 @@
 		<div class="fieldset" data-legend="Popup default Size">
 			<div class="fields">
 				<div class="field">
-					<label for="default-width">Width : </label>
-					<input id="default-width" type="number" min="100" max="1920">
+					<label for="main-width">Width : </label>
+					<input id="main-width" type="number" min="100" max="1920">
 				</div>
 
 				<div class="field">
-					<label for="default-height">Height : </label>
-					<input id="default-height" type="number" min="100" max="1080">
+					<label for="main-height">Height : </label>
+					<input id="main-height" type="number" min="100" max="1080">
 				</div>
 
 				<div class="field">
-					<button id="default-submit" type="submit" class="browser-style default">Save</button>
+					<button id="main-reset" type="submit" class="browser-style">Reset</button>
+					<button id="main-submit" type="submit" class="browser-style default">Save</button>
 				</div>
 			</div>
 		</div>
