Improve browser action

--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -7,12 +7,17 @@
 </head>
 <body>
 
-	<footer class="panel-section panel-section-footer">
-		<div id="current-tab-action" class="panel-section-footer-button">Move in a Popup</div>
-	</footer>
+	<div class="panel-section panel-section-list">
+		<div id="current-tab-action" class="panel-list-item">
+			<img src="../icons/logo.svg" alt="" class="icon">
+			<div class="text">Move this tab in a Popup</div>
+			<!-- <div class="text-shortcut">Alt-P</div> -->
+		</div>
+		<div class="panel-section-separator"></div>
+	</div>
 
 	<div class="panel-section panel-section-header">
-		<div class="text-section-header">Move Popup back</div>
+		<div class="text-section-header">Move Popups back</div>
 	</div>
 
 	<div id="list-popups" class="panel-section panel-section-list"></div>
